force-app/main/default/objects/Correo_estado_cuenta__c/Correo_estado_cuenta__c.object-meta.xml
<CustomObject>
    <label>Correo estado de cuenta</label>
    <nameField>
        <label>Nombre de Correo estado de cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Correo estado de cuenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>