force-app/main/default/objects/Correo_estado_cuenta__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Correo estado de cuenta</relationshipLabel>
    <relationshipName>Correo_estado_de_cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>