force-app/main/default/objects/Correo_estado_cuenta__c/fields/Enviado__c.field-meta.xml
<CustomField>
    <fullName>Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado</label>
    <type>Checkbox</type>
</CustomField>