force-app/main/default/objects/Correo_estado_cuenta__c/fields/Enviado_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Enviado_Mensual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado Mensual</label>
    <type>Checkbox</type>
</CustomField>