force-app/main/default/objects/Correo_estado_cuenta__c/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Grupo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>